fixing email overflow on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -72,7 +72,7 @@ body {
 
 .emailMessage {
   padding: 10px;
-  height: 50px;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -185,10 +185,6 @@ body {
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 1px 3px 1px rgba(60, 64, 67, 0.149);
   border: none;
-}
-
-#emailBodyText {
-  margin-top: 30px;
 }
 
 #emailCheckbox {
@@ -313,9 +309,6 @@ body {
 #profilePicImg:active,
 #profilePicImg:hover {
   border: none;
-}
-
-#redo {
 }
 
 #redoButton {
